--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>my-first-repo</title>
 </head>
 <body>
-    
+    <h1>hi this is h1 tag</h1>
+    <h1>hi this is h1 tag</h1>
+    <h1>hi this is h1 tag</h1>
 </body>
 </html>
